[JENKINS-25126] - Added support of custom delimiters for multi-level selects
Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

--- a/src/main/resources/com/cwctravel/hudson/plugins/extended_choice_parameter/Messages.properties
+++ b/src/main/resources/com/cwctravel/hudson/plugins/extended_choice_parameter/Messages.properties
@@ -2,3 +2,5 @@ ExtendedChoiceParameterDefinition.DisplayName=Extended Choice Parameter
 ExtendedChoiceParameterDefinition.PropertyFileDoesntExist=%s doesn't seem to exist.
 ExtendedChoiceParameterDefinition.PropertyFileExistsButProvidedKeyIsInvalid=%s exists, but the provided key \"%s\" doesn't exist in this property file.
 ExtendedChoiceParameterDefinition.PropertyFileExistsButNoProvidedKey=%s exists, but you have to provide a property key as well.
+MultiLevelSelectHelper.emptyInputError=The trimmed string is null
+MultiLevelSelectHelper.invalidStringError=The encoded value is not a special string. Only one symbol or special symbols (\\t and \\s) are supported
